Update for GitHub Pages deployment with correct base path

--- a/admin-login.html
+++ b/admin-login.html
@@ -145,6 +145,7 @@
             100% { transform: rotate(360deg); }
         }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body>
     <div class="login-container">
