--- a/auth-gateway.html
+++ b/auth-gateway.html
@@ -165,6 +165,7 @@
             }
         }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body>
     <div class="container">
