--- a/xradmin-dashboard.html
+++ b/xradmin-dashboard.html
@@ -177,6 +177,7 @@
             color: #00ff88;
         }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body class="admin-dashboard">
     <div class="admin-header">
