--- a/xrgxy.html
+++ b/xrgxy.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
     <title>XrCakey Vault - Hump Heaven</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -100,6 +97,7 @@
             display: block;
         }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body class="bg-cyber-dark text-white overflow-x-hidden">
 
