--- a/auth-signup.html
+++ b/auth-signup.html
@@ -57,6 +57,7 @@
             box-shadow: 0 0 30px rgba(0, 255, 255, 0.5);
         }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
     <div class="glass-card rounded-2xl p-8 w-full max-w-md">
