--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="supabase-config.js"></script>
     <link rel="stylesheet" href="floating-nav.css">
+    <script src="cache-buster.js"></script>
 </head>
 <body class="bg-gradient-to-br from-gray-900 via-purple-900 to-gray-900 min-h-screen text-white" style="font-family: 'Orbitron', monospace;">
     
