--- a/user-profile.html
+++ b/user-profile.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="floating-nav.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="supabase-config.js"></script>
-    <script src="auth-utils.js"></script>
+    <script src="auth-check.js"></script>
     <style>
         body {
             background: linear-gradient(135deg, #0A0A0F 0%, #1A1A2E 50%, #0A0A0F 100%);
@@ -38,6 +38,7 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body class="min-h-screen p-4 pb-32">
     <div class="max-w-4xl mx-auto mt-8">
