--- a/video-player.html
+++ b/video-player.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="supabase-config.js"></script>
-    <script src="auth-utils.js"></script>
+    <script src="auth-check.js"></script>
     <link rel="stylesheet" href="floating-nav.css">
     <style>
         body {
