--- a/xrcategory-gallery.html
+++ b/xrcategory-gallery.html
@@ -3,9 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
   <title>Categories Mode - Hump Heaven</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -152,6 +149,7 @@
     .category-banner:nth-child(2n) { animation-duration: 7s; }
     .category-banner:nth-child(3n) { animation-duration: 8s; }
   </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body class="bg-cyber-dark text-white overflow-x-hidden">
 
