--- a/xrdocs.html
+++ b/xrdocs.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
     <title>Hxmp Space - Documentation</title>
     <link rel="stylesheet" href="styles.css?v=1760664105">
     <link rel="stylesheet" href="floating-nav.css?v=1760664105">
@@ -58,6 +55,7 @@
             }
         }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body>
 
