--- a/xrhxmpgallery.html
+++ b/xrhxmpgallery.html
@@ -7,6 +7,7 @@
   <script>
     window.location.replace('xrgallery-entrance.html');
   </script>
+    <script src="cache-buster.js"></script>
 </head>
 <body>
   <p>If you are not redirected automatically, <a href="xrgallery-entrance.html">click here</a>.</p>
