--- a/xrphoto-gallery.html
+++ b/xrphoto-gallery.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
     <title>Photo Gallery - Hump Heaven</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -72,6 +69,7 @@
         html, body { overflow-x: hidden; }
         img, video, iframe { max-width: 100%; height: auto; }
     </style>
+    <script src="cache-buster.js"></script>
 </head>
 <body class="bg-cyber-dark text-white overflow-x-hidden">
 
